load("@npm//http-server:index.bzl", "http_server")
load("@npm//vercel:index.bzl", "vercel")
load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@npm//webpack-dev-server:index.bzl", "webpack_dev_server")
load("//:eslint/eslint.bzl", "eslint")
load("//jest:jest.bzl", "jest_test")
load(":dependencies.bzl", "get_deps")

webpack_cli(
    name = "public",
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(@D)",
        "--mode",
        "production",
    ],
    data = glob([
        "**/*.js",
        "**/*.json",
        "**/*.ico",
        "**/.env",
        "**/*.css",
    ]) + get_deps() + [
        "//:babel.config.js",
        ":.babelrc.js",
        "@npm//dotenv",
        "@npm//react-refresh",
        "@npm//@pmmmwh/react-refresh-webpack-plugin",
    ],
    output_dir = True,
)

vercel(
    name = "deploy",
    args = [
        "./src/trainingjournal",
        "--prod",
        "--confirm",
    ],
    data = [
        ":public",
        ":vercel.json",
    ],
)

webpack_dev_server(
    name = "dev_server",
    args = [
        "--entry",
        "./src/trainingjournal/src/index.js",
        "--config",
        "$(execpath webpack.config.js)",
        "--port",
        "8001",
        "--hot",
        "--watch-poll",
    ],
    data = glob([
        "**/*.js",
        "**/*.json",
        "**/*.ico",
        "**/*.css",
        "**/.env",
    ]) + get_deps() + [
        "//:babel.config.js",
        ":.babelrc.js",
    ],
)

eslint(
    name = "lint",
    data = [
        ":src",
    ],
    entry = ":src",
)

jest_test(
    name = "test",
    srcs = [
        "//:babel.config.js",
        ":.babelrc.js",
    ] + glob([
        "src/**/*.js",
        "mocks/**/*.js",
        "scripts/**/*.js",
        "test-utils/**/*.js",
        "**/*.json",
    ]),
    jest_config = ":jest.config.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = get_deps() + [
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//@testing-library/jest-dom",
        "//jest:preset",
        "//src/mock-server:mock_server",
    ],
)

http_server(
    name = "server",
    args = [
        "src/trainingjournal/public/",
        "-o",
        "-p",
        "8001",
    ],
    data = [
        ":public",
    ],
)
