load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//http-server:index.bzl", "http_server")
load("@npm//relay-compiler:index.bzl", "relay_compiler")
load("@npm//webpack-cli:index.bzl", "webpack_cli")
load("@npm//webpack-dev-server:index.bzl", "webpack_dev_server")
load("//:eslint/eslint.bzl", "eslint")
load("//jest:jest.bzl", "jest_test")
load(":dependencies.bzl", "get_deps")

webpack_cli(
    name = "public",
    args = [
        "$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-path",
        "$(@D)",
        "--mode",
        "production",
        "--output-public-path",
        "/",
    ],
    data = glob([
        "**/*.js",
        "**/*.json",
        "**/*.ico",
        "**/.env",
        "**/*.css",
        "**/*.html",
        "**/*.jpg",
        "**/*.webp",
    ]) + get_deps() + [
        "//:babel.config.js",
        ":.babelrc.js",
        "@npm//dotenv",
        "@npm//react-refresh",
        "@npm//@pmmmwh/react-refresh-webpack-plugin",
        "@npm//autoprefixer",
        "@npm//postcss-loader",
        "@npm//postcss-preset-env",
        "@npm//webpack-merge",
        "@npm//extract-css-chunks-webpack-plugin",
        "@npm//css-minimizer-webpack-plugin",
        "@npm//file-loader",
        "@npm//babel-plugin-module-resolver",
    ],
    output_dir = True,
)

webpack_dev_server(
    name = "dev_server",
    args = [
        "--entry",
        "./$(execpath src/index.js)",
        "--config",
        "$(execpath webpack.config.js)",
        "--output-public-path",
        "/",
        "--port",
        "8001",
        "--hot",
        "--watch-poll",
        "--history-api-fallback",
    ],
    data = glob([
        "**/*.js",
        "**/*.json",
        "**/*.ico",
        "**/*.css",
        "**/.env",
        "**/*.html",
        "**/*.jpg",
        "**/*.webp",
    ]) + get_deps() + [
        "//:babel.config.js",
        ":.babelrc.js",
    ],
)

eslint(
    name = "lint",
    data = [
        ":src",
    ],
    entry = ":src",
)

jest_test(
    name = "test",
    srcs = [
        "//:babel.config.js",
        ":.babelrc.js",
    ] + glob([
        "src/**/*.js",
        "mocks/**/*.js",
        "scripts/**/*.js",
        "test-utils/**/*.js",
        "**/*.json",
    ]),
    jest_config = ":jest.config.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = get_deps() + [
        "@npm//@testing-library/react",
        "@npm//@testing-library/user-event",
        "@npm//@testing-library/jest-dom",
        "//jest:preset",
        "//src/mock-server:mock_server",
        "@npm//identity-obj-proxy",
        "@npm//babel-plugin-module-resolver",
        "@npm//@testing-library/react-hooks",
    ],
)

http_server(
    name = "server",
    args = [
        "src/trainingjournal/public/",
        "-o",
        "-p",
        "8001",
    ],
    data = [
        ":public",
    ],
)

nodejs_binary(
    name = "deploy",
    data = [
        ":public",
        ":vercel.json",
    ],
    entry_point = "@npm//:node_modules/vercel/dist/index.js",
    templated_args = [
        "./src/trainingjournal",
        "--confirm",
        "--token",
        "$$ZEIT_TOKEN",
    ],
)

relay_compiler(
    name = "relay",
    args = [
        "--src",
        "./src/trainingjournal/src",
        "--schema",
        "./src/trainingjournal-gql/schema.graphql",
    ],
    data = [
        ":src",
        "//src/trainingjournal-gql:schema.graphql",
    ],
)
